# NEXUS

./: .env.example  .gitignore  INTEGRATION_SUMMARY.md  Procfile  README.md  pyproject.toml  requirements.txt  test_models.py
accounts/: models.py  serializers.py  views.py
chat/: admin.py  authentication.py  consumers.py  routing.py  serializers.py  views.py
chat/migrations/: 0001_initial.py  (+2 more)
config/: settings.py  urls.py
learnhub/: apps.py  urls.py  views.py
mental_health/: views.py
nexus-backend/: .env.example  .gitignore  USAGELEARNINGHUB.md  manage.py  me.py  pyproject.toml  requirements.txt  scrapejobs.py  validate_implementation.py
nexus-backend/accounts/: USAGE.md  models.py  serializers.py  signals.py  urls.py  views.py
nexus-backend/accounts/migrations/: 0001_initial.py
nexus-backend/auth/: serializers.py
nexus-backend/authentication/: serializers.py  urls.py  views.py
nexus-backend/career_mentorship/: apps.py
nexus-backend/career_mentorship_service/: apps.py  models.py  urls.py  views.py
nexus-backend/certificates/: admin.py  models.py  serializers.py  urls.py  views.py
nexus-backend/certs/: cert.pem  key.pem  localhost.pem
nexus-backend/chat/: admin.py  authentication.py  consumers.py  models.py  permissions.py  serializers.py  urls.py  views.py
nexus-backend/config/: asgi.py  settings.py  urls.py
nexus-backend/learnhub/: apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
nexus-backend/mental_health/: urls.py  views.py
nexus-backend/mental_health_service/: apps.py  models.py  urls.py  views.py
nexus-backend/resources/: README.md  admin.py  models.py  serializers.py
nexus-backend/resources/api/: README.md  urls.py  views.py
nexus-backend/resources/management/commands/: load_test_data.py  update_pdfs.py
nexus-backend/resources/migrations/: 0001_initial.py
nexus-backend/simulations/: consumers.py  engine.py  models.py  permissions.py  routing.py  serializers.py  tasks.py  test_parameters.py  urls.py  views.py
nexus-backend/simulations/management/commands/: load_premium_data.py  populate_models.py
nexus-backend/users/: admin.py  models.py
nexus-backend/users/migrations/: 0001_initial.py
nexus-frontend/: package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1751440499223-e19328ef77207.mjs  (+2 more)
(+180 files in other folders)
